fix answer text alignment on program summary page

--- a/server/app/assets/stylesheets/northstar/_uswds-theme-custom-styles.scss
+++ b/server/app/assets/stylesheets/northstar/_uswds-theme-custom-styles.scss
@@ -587,4 +587,10 @@ main {
     padding-right: 20px;
   }
   // -- end
+
+  #summary-multiline-list {
+    margin: 0;
+    text-align: left;
+    padding-left: 0;
+  }
 }
